keep line breaks in forum and prevent long words overflowing (#4457)
also apply styles to common responses preview area

--- a/kitsune/sumo/static/sumo/scss/layout/_forum.scss
+++ b/kitsune/sumo/static/sumo/scss/layout/_forum.scss
@@ -370,9 +370,14 @@
   }
 }
 
-.question, .answer, .forum--entry-content {
+.question, .answer, .forum--entry-content, .response-preview-rendered {
   .content {
     @include c.ulol;
+
+    p {
+      white-space: pre-line;
+      overflow-wrap: break-word;
+    }
   }
 }
 
